Fix code smells Remove maven-enforcer-plugin